<resources>
    <string name="app_name">PayApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_make_sure_no_data_connection">Make sure you have an active data connection</string>
    <string name="txt_welc_to_xapp">Welcome to pay’s World</string>


    <string name="txt_x_list">Home</string>

    <string name="txt_x_detail">X Detail</string>
    <string name="txt_my_feed">My Feed</string>
    <string name="txt_my_post">My Post</string>

    <!--Login Screen-->
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="text_enter_mobile_number">Enter mobile number</string>
    <string name="text_enter_passwrd">Enter Password</string>
    <string name="text_preset_passwrd">Preset Password</string>
    <string name="text_forgot_passwrd">I don’t have or remember my password</string>
    <string name="text_new_user">New User?</string>
    <string name="text_sign_up">Login with Mobile number and OTP</string>
    <string name="otp_message">Send an OTP to verify</string>
    <string name="login">Login</string>
    <string name="txt_follow">Follow</string>
    <string name="Welcome">Welcome</string>
    <string name="txt_permission_granted">permission is already granted</string>
    <string name="txt_select_diff_user">Please select different user</string>
    <string name="txt_until_you">Until you grant the permission, we canot display the names</string>
    <string name="txt_enter_your">Enter your mobile number below or choose random number from your contacts</string>
    <string name="txt_open_contacts">Open contacts</string>
    <string name="txt_pay_passwrd">123456</string>
    <string name="txt_pay_dummy_phone_no">1234567890</string>
    <string name="txt_logout">Logout</string>
    <string name="text_no">No</string>
    <string name="text_yes">Yes</string>
    <string name="text_are_u_sure_logout">Are you sure you want to logout?</string>
    <string name="title_search">Search</string>
    <string name="title_add_post">Add Post</string>
    <string name="title_post_detail">Post Detail</string>
    <string name="title_feed_detail">Feed Detail</string>
    <string name="title_comment">Comment</string>
    <string name="title_add">add</string>
    <string name="txt_something_went_wrong">Something went wrong, please try again later</string>
    <string name="txt_no_result_incr_followers">No result found please increase your followers</string>


</resources>