<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group_setting"
        android:checkableBehavior="single">

        <item
            android:id="@+id/home_frag"
            android:icon="@drawable/logout"
            android:title="@string/txt_x_list" />
        <item
            android:id="@+id/search_frag"
            android:icon="@drawable/logout"
            android:title="@string/title_search" />
        <item
            android:id="@+id/addPost_frag"
            android:icon="@drawable/logout"
            android:title="@string/title_add_post" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/txt_logout" />
    </group>

</menu>