<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screenBgColor">

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardElevation="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/text_are_u_sure_logout"
                android:textColor="@color/colorFontDark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/no_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:background="@drawable/button_rectangle_shape"
                    android:gravity="start"
                    android:paddingLeft="@dimen/_20sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingRight="@dimen/_20sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:text="@string/text_no"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_11sdp" />

                <TextView
                    android:id="@+id/yes_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:background="@drawable/button_rectangle_shape"
                    android:gravity="end"
                    android:paddingLeft="@dimen/_20sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingRight="@dimen/_20sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:text="@string/text_yes"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_11sdp" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>